@@ -1,3 +1,4 @@
+Add the ability to start the config-dialog without the systray-icon
 Add Firefox support to the bookmark launcher
 Create an icon
 Create at least one more display plugin to include
