@@ -9,225 +9,266 @@
             <x>0</x>
             <y>0</y>
             <width>449</width>
-            <height>455</height>
+            <height>509</height>
         </rect>
     </property>
     <property name="caption">
         <string>General Settings</string>
     </property>
-    <hbox>
+    <spacer>
         <property name="name">
-            <cstring>unnamed</cstring>
+            <cstring>spacer3</cstring>
         </property>
-        <property name="margin">
-            <number>0</number>
+        <property name="orientation">
+            <enum>Horizontal</enum>
         </property>
-        <widget class="QLayoutWidget">
+        <property name="sizeType">
+            <enum>Expanding</enum>
+        </property>
+        <property name="sizeHint">
+            <size>
+                <width>160</width>
+                <height>20</height>
+            </size>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>338</x>
+                <y>217</y>
+                <width>110</width>
+                <height>20</height>
+            </rect>
+        </property>
+    </spacer>
+    <widget class="QLayoutWidget">
+        <property name="name">
+            <cstring>layout4</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>0</x>
+                <y>0</y>
+                <width>331</width>
+                <height>509</height>
+            </rect>
+        </property>
+        <vbox>
             <property name="name">
-                <cstring>layout8</cstring>
+                <cstring>unnamed</cstring>
             </property>
-            <vbox>
+            <widget class="QButtonGroup">
                 <property name="name">
-                    <cstring>unnamed</cstring>
+                    <cstring>buttonGroup2</cstring>
                 </property>
-                <widget class="QButtonGroup">
+                <property name="sizePolicy">
+                    <sizepolicy>
+                        <hsizetype>3</hsizetype>
+                        <vsizetype>3</vsizetype>
+                        <horstretch>0</horstretch>
+                        <verstretch>0</verstretch>
+                    </sizepolicy>
+                </property>
+                <property name="title">
+                    <string>Executing Actions</string>
+                </property>
+                <vbox>
                     <property name="name">
-                        <cstring>buttonGroup2</cstring>
+                        <cstring>unnamed</cstring>
                     </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>3</hsizetype>
-                            <vsizetype>3</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                    <property name="title">
-                        <string>Executing Actions</string>
-                    </property>
-                    <vbox>
+                    <widget class="QLabel">
                         <property name="name">
-                            <cstring>unnamed</cstring>
+                            <cstring>HideDelayLabel</cstring>
                         </property>
-                        <widget class="QLabel">
-                            <property name="name">
-                                <cstring>HideDelayLabel</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Delay before hiding launcher:</string>
-                            </property>
-                            <property name="toolTip" stdset="0">
-                                <string>How long Katapult waits before hiding the launcher</string>
-                            </property>
-                            <property name="whatsThis" stdset="0">
-                                <string>After an action is performed or no results were found, the Katapult launcher will be hidden.
+                        <property name="text">
+                            <string>Delay before hiding launcher:</string>
+                        </property>
+                        <property name="toolTip" stdset="0">
+                            <string>How long Katapult waits before hiding the launcher</string>
+                        </property>
+                        <property name="whatsThis" stdset="0">
+                            <string>After an action is performed or no results were found, the Katapult launcher will be hidden.
 
 This sets how long Katapult will wait before hiding the launcher.</string>
-                            </property>
-                        </widget>
-                        <widget class="QSlider">
-                            <property name="name">
-                                <cstring>hideDelay</cstring>
-                            </property>
-                            <property name="maxValue">
-                                <number>5000</number>
-                            </property>
-                            <property name="lineStep">
-                                <number>100</number>
-                            </property>
-                            <property name="pageStep">
-                                <number>1000</number>
-                            </property>
-                            <property name="orientation">
-                                <enum>Horizontal</enum>
-                            </property>
-                            <property name="tickmarks">
-                                <enum>Below</enum>
-                            </property>
-                            <property name="tickInterval">
-                                <number>1000</number>
-                            </property>
-                        </widget>
-                        <widget class="QCheckBox">
-                            <property name="name">
-                                <cstring>autoExec</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Automatically perform default action</string>
-                            </property>
-                            <property name="toolTip" stdset="0">
-                                <string>Whether to wait for confirmation or automatically execute actions</string>
-                            </property>
-                            <property name="whatsThis" stdset="0">
-                                <string>If enabled, Katapult will automatically perform the default action once all items but one have been eliminated. This avoids the extra keystroke after there is only one possibility.</string>
-                            </property>
-                        </widget>
-                    </vbox>
-                </widget>
-                <widget class="QButtonGroup">
-                    <property name="name">
-                        <cstring>noResultOptions</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>1</hsizetype>
-                            <vsizetype>1</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                    <property name="title">
-                        <string>No Results</string>
-                    </property>
-                    <property name="selectedId" stdset="0">
-                        <number>-1</number>
-                    </property>
-                    <vbox>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
                         </property>
-                        <widget class="QLabel">
-                            <property name="name">
-                                <cstring>textLabel1</cstring>
-                            </property>
-                            <property name="text">
-                                <string>When there are no results:</string>
-                            </property>
-                        </widget>
-                        <widget class="QRadioButton">
-                            <property name="name">
-                                <cstring>nrClearQuery</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Clear the query after a delay</string>
-                            </property>
-                        </widget>
-                        <widget class="QRadioButton">
-                            <property name="name">
-                                <cstring>nrHideDisplay</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Hide the display after a delay</string>
-                            </property>
-                        </widget>
-                        <widget class="QRadioButton">
-                            <property name="name">
-                                <cstring>nrDoNothing</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Do nothing</string>
-                            </property>
-                        </widget>
-                        <widget class="QLabel">
-                            <property name="name">
-                                <cstring>textLabel2</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Delay before clearing or hiding:</string>
-                            </property>
-                        </widget>
-                        <widget class="QSlider">
-                            <property name="name">
-                                <cstring>noResultsDelay</cstring>
-                            </property>
-                            <property name="maxValue">
-                                <number>5000</number>
-                            </property>
-                            <property name="lineStep">
-                                <number>100</number>
-                            </property>
-                            <property name="pageStep">
-                                <number>1000</number>
-                            </property>
-                            <property name="orientation">
-                                <enum>Horizontal</enum>
-                            </property>
-                            <property name="tickmarks">
-                                <enum>Below</enum>
-                            </property>
-                            <property name="tickInterval">
-                                <number>1000</number>
-                            </property>
-                        </widget>
-                    </vbox>
-                </widget>
-                <spacer>
+                    </widget>
+                    <widget class="QSlider">
+                        <property name="name">
+                            <cstring>hideDelay</cstring>
+                        </property>
+                        <property name="maxValue">
+                            <number>5000</number>
+                        </property>
+                        <property name="lineStep">
+                            <number>100</number>
+                        </property>
+                        <property name="pageStep">
+                            <number>1000</number>
+                        </property>
+                        <property name="orientation">
+                            <enum>Horizontal</enum>
+                        </property>
+                        <property name="tickmarks">
+                            <enum>Below</enum>
+                        </property>
+                        <property name="tickInterval">
+                            <number>1000</number>
+                        </property>
+                    </widget>
+                    <widget class="QCheckBox">
+                        <property name="name">
+                            <cstring>autoExec</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Automatically perform default action</string>
+                        </property>
+                        <property name="toolTip" stdset="0">
+                            <string>Whether to wait for confirmation or automatically execute actions</string>
+                        </property>
+                        <property name="whatsThis" stdset="0">
+                            <string>If enabled, Katapult will automatically perform the default action once all items but one have been eliminated. This avoids the extra keystroke after there is only one possibility.</string>
+                        </property>
+                    </widget>
+                </vbox>
+            </widget>
+            <widget class="QButtonGroup">
+                <property name="name">
+                    <cstring>noResultOptions</cstring>
+                </property>
+                <property name="sizePolicy">
+                    <sizepolicy>
+                        <hsizetype>1</hsizetype>
+                        <vsizetype>1</vsizetype>
+                        <horstretch>0</horstretch>
+                        <verstretch>0</verstretch>
+                    </sizepolicy>
+                </property>
+                <property name="title">
+                    <string>No Results</string>
+                </property>
+                <property name="selectedId" stdset="0">
+                    <number>-1</number>
+                </property>
+                <vbox>
                     <property name="name">
-                        <cstring>spacer3_2</cstring>
+                        <cstring>unnamed</cstring>
                     </property>
-                    <property name="orientation">
-                        <enum>Vertical</enum>
+                    <widget class="QLabel">
+                        <property name="name">
+                            <cstring>textLabel1</cstring>
+                        </property>
+                        <property name="text">
+                            <string>When there are no results:</string>
+                        </property>
+                    </widget>
+                    <widget class="QRadioButton">
+                        <property name="name">
+                            <cstring>nrClearQuery</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Clear the query after a delay</string>
+                        </property>
+                    </widget>
+                    <widget class="QRadioButton">
+                        <property name="name">
+                            <cstring>nrHideDisplay</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Hide the display after a delay</string>
+                        </property>
+                    </widget>
+                    <widget class="QRadioButton">
+                        <property name="name">
+                            <cstring>nrDoNothing</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Do nothing</string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel">
+                        <property name="name">
+                            <cstring>textLabel2</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Delay before clearing or hiding:</string>
+                        </property>
+                    </widget>
+                    <widget class="QSlider">
+                        <property name="name">
+                            <cstring>noResultsDelay</cstring>
+                        </property>
+                        <property name="maxValue">
+                            <number>5000</number>
+                        </property>
+                        <property name="lineStep">
+                            <number>100</number>
+                        </property>
+                        <property name="pageStep">
+                            <number>1000</number>
+                        </property>
+                        <property name="orientation">
+                            <enum>Horizontal</enum>
+                        </property>
+                        <property name="tickmarks">
+                            <enum>Below</enum>
+                        </property>
+                        <property name="tickInterval">
+                            <number>1000</number>
+                        </property>
+                    </widget>
+                </vbox>
+            </widget>
+            <widget class="QButtonGroup">
+                <property name="name">
+                    <cstring>buttonGroup3</cstring>
+                </property>
+                <property name="title">
+                    <string>System Tray</string>
+                </property>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>systrayIcon</cstring>
                     </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
+                    <property name="geometry">
+                        <rect>
+                            <x>10</x>
+                            <y>30</y>
+                            <width>307</width>
+                            <height>24</height>
+                        </rect>
                     </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>140</height>
-                        </size>
+                    <property name="mouseTracking">
+                        <bool>false</bool>
                     </property>
-                </spacer>
-            </vbox>
-        </widget>
-        <spacer>
-            <property name="name">
-                <cstring>spacer3</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Horizontal</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>160</width>
-                    <height>20</height>
-                </size>
-            </property>
-        </spacer>
-    </hbox>
+                    <property name="text">
+                        <string>Show an icon in the Systray</string>
+                    </property>
+                    <property name="toolTip" stdset="0">
+                        <string>If activated, katapult shows an icon in the System Tray when running</string>
+                    </property>
+                    <property name="whatsThis" stdset="0">
+                        <string>If enabled, Katapult will automatically show an Icon in the System Tray.</string>
+                    </property>
+                </widget>
+            </widget>
+            <spacer>
+                <property name="name">
+                    <cstring>spacer3_2</cstring>
+                </property>
+                <property name="orientation">
+                    <enum>Vertical</enum>
+                </property>
+                <property name="sizeType">
+                    <enum>Expanding</enum>
+                </property>
+                <property name="sizeHint">
+                    <size>
+                        <width>20</width>
+                        <height>80</height>
+                    </size>
+                </property>
+            </spacer>
+        </vbox>
+    </widget>
 </widget>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
