@@ -1,3 +1,7 @@
+2005-7-13  Bastian Holst  <bastianholst@gmx.de>
+
+        * added the ability to deactivate the systray-icon
+
 0.1 to 0.2
 	-- Katapult --
 	Feature: when there are no results, the query can be cleared or the
